--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Liga Candanga De Futsal Distrito Federal</title>
+    
+    <title>Liga Candanga de Futsal | O Futuro do Futsal Começa Aqui</title>
+    <meta name="description" content="Acompanhe a maior liga de futsal do Centro-Oeste. Tabelas, jogos ao vivo, notícias e estatísticas do Candangão 2025. Inscreva sua equipe!" />
+    <meta name="keywords" content="Futsal, Brasília, Liga Candanga, Esporte, Campeonato, DF" />
+    <meta name="author" content="Liga Candanga" />
+    
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ligacandanga.com.br/" />
+    <meta property="og:title" content="Liga Candanga de Futsal DF" />
+    <meta property="og:description" content="O Futuro do Futsal Começa Aqui! Acompanhe o Candangão 2025." />
+    <meta property="og:image" content="URL_DA_SUA_LOGO_OU_BANNER.jpg" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Liga Candanga de Futsal DF" />
+    <meta property="twitter:description" content="O Futuro do Futsal Começa Aqui! Acompanhe o Candangão 2025." />
   </head>
-  <body>
+  <body class="bg-slate-950 text-slate-100 antialiased selection:bg-yellow-400 selection:text-black">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
