--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logoligasemfundo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <title>Liga Candanga de Futsal | O Futuro do Futsal Começa Aqui</title>
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://ligacandanga.com.br/" />
     <meta property="og:title" content="Liga Candanga de Futsal DF" />
     <meta property="og:description" content="O Futuro do Futsal Começa Aqui! Acompanhe o Candangão 2025." />
-    <meta property="og:image" content="URL_DA_SUA_LOGO_OU_BANNER.jpg" />
+    <meta property="og:image" content="/logoligasemfundo.png" />
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:title" content="Liga Candanga de Futsal DF" />
